Update About page with emojis

--- a/about.qmd
+++ b/about.qmd
@@ -3,12 +3,16 @@ title: "About me"
 ---
 
 ## Barbara Dalmaso, B.sC., MBA, Ph.D.
-![Barbara Dalmaso]("~/R studies/20250902/hiv-cdisc/img.jpg"){fig-align="center" width="200px" style="border-radius:50%;"}
+<div style="text-align:center;">
+  <img src="data/img.jpg" style="width:200px; height:200px; border-radius:50%;" />
+</div>
 
-**Barbara** is a biomedical researcher and bioinformatician with experience in studying neurodegenerative diseases and cancer. She is dedicated to bridging data science with biology and health by transforming genomics and clinical data into decision-making processes, with a strong focus on next-generation sequencing and patient-centered analytics.  
-In recent years, she has developed reproducible statistical pipelines to support precision medicine, translational research, and clinical trials.  
+**Barbara** is a biomedical researcher 🔬 and bioinformatician with experience in studying neurodegenerative diseases 🧠 and cancer. She is dedicated to bridging data science 📊 with biology and health by transforming genomics and clinical data into decision-making processes, with a strong focus on next-generation sequencing and patient-centered analytics.  
 
-Barbara has also been a speaker at major conferences in the field of medical statistics around the world, including **Biomolecular Horizons** (Melbourne, Australia), **Computational Intelligence Methods for Bioinformatics and Biostatistics** (Benevento, Italy), **Applied Bioinformatics for Life Sciences** (Leuven, Belgium), among others.
+In recent years, she has developed reproducible statistical pipelines to support precision medicine, translational research, and clinical trials 🧫.  
+
+Barbara has also been a speaker 🎤 at major conferences in the field of medical statistics around the world, including **Biomolecular Horizons** (Melbourne, Australia), **Computational Intelligence Methods for Bioinformatics and Biostatistics** (Benevento, Italy), **Applied Bioinformatics for Life Sciences** (Leuven, Belgium), among others.
+
 
 Currently works as Statistical Programmer at the biopharmaceutical Syneos Health.
 
