--- a/pipeline.qmd
+++ b/pipeline.qmd
@@ -5,15 +5,10 @@ toc: true
 toc-depth: 4
 ---
 
-## Quick Links
-
-- [SDTM Domains Overview](#sdtm-overview)
-- [ADaM Overview](#adam-overview)
-- [TGLs Overview](#tgls-overview)
-
-<div class="content-box">
 
 ## SDTM Domains Overview {#sdtm-overview}
+
+<div class="content-box">
 
 The SDTM (Study Data Tabulation Model) organizes clinical trial data into standardized domains, facilitating analysis and reporting. Each domain captures specific information about study participants, such as demographics, medical history, clinical assessments, and laboratory results.
 
@@ -418,7 +413,12 @@ write.csv(lb, "data/lb.csv", row.names = FALSE)
 head(lb, 6)
 ```
 
+</div>
+
+
 ## ADaM Overview {#adam-overview}
+
+<div class="content-box">
 
 The ADaM (Analysis Data Model) standard was developed by CDISC to structure clinical trial datasets for statistical analysis. ADaM datasets are derived from SDTM and organized to facilitate statistical programming, as well as the creation of tables, listings, and graphs (TLGs) - more details below. They follow strict rules for traceability, ensuring that every variable can be linked back to its source in SDTM.
 
@@ -518,7 +518,11 @@ write.csv(adlb, "data/adlb.csv", row.names = FALSE)
 head(adlb)
 ```
 
+</div>
+
 ## TGLs Overview {#tgls-overview}
+
+<div class="content-box">
 
 Tables, Listings, and Graphs (TLGs) are the final outputs generated from ADaM datasets to support clinical trial reporting. They are designed to provide clear, standardized summaries of study results that can be reviewed by clinicians, statisticians, and regulatory agencies.
 
